@@ -13,6 +13,12 @@ NEW FEATURES
     o   The readNewsgroup() reader function can now be configured for
         custom date formats (via the DateFormat argument).
 
+    o   The readPDF() reader function can now be configured (via the
+        PdfinfoOptions and PdftotextOptions arguments).
+
+    o   The readDOC() reader function can now be configured (via the
+        AntiwordOptions argument).
+
                 CHANGES IN tm VERSION 0.3-3
 
 NEW FEATURES
